--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Password Strength Checker</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Password Strength Checker</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <div class="container">
-        <h1>Password Strength Checker</h1>
-        <input type="password" id="password" placeholder="Enter your password">
-        <p id="strength">Password strength: </p>
-    </div>
-    <script src="script.js"></script>
-</body>
+  <div class="container">
+    <h1>Password Strength Checker</h1>
+    <input type="password" id="password" placeholder="Enter your password">
+    <p id="strength">Password strength: </p>
 
+    <!-- Visit counter display -->
+    <p id="visit-counter"></p>
+  </div>
+  <script src="script.js"></script>
+</body>
 </html>
